--- a/app/views/manage/appeals/v3/index.html
+++ b/app/views/manage/appeals/v3/index.html
@@ -118,7 +118,7 @@
         rows: [
           [
             {
-              html: '<a href="appeal-details?appealCode=1345264&deadline=3">1345264</a>'
+              html: '<a href="appeal-details?appealCode=1345264&action=&email=&post=">1345264</a>'
             },
             {
               html: '21/04125/FUL'
@@ -131,13 +131,13 @@
               format: 'numeric'
             },
             {
-              html: '<a href="/manage/questionnaire/v11/task-list"><span class="govuk-visually-hidden">Submit </span>Questionnaire</a>',
+              html: '<a href="/manage/questionnaire/v11/task-list?action=&email=&post="><span class="govuk-visually-hidden">Submit </span>Questionnaire</a>',
               format: 'numeric'
             }
           ] if data['questionnaire'] != 'complete',
           [
             {
-              html: '<a href="appeal-details?appealCode=1345127&deadline=4">1345127</a>'
+              html: '<a href="appeal-details?appealCode=1345127&action=&email=&post=">1345127</a>'
             },
             {
               html: '22/03021/FUL'
@@ -150,13 +150,13 @@
               format: 'numeric'
             },
             {
-              html: '<span class="govuk-visually-hidden">Submit </span><a href="/manage/final-comments/v1/add-comments">Final comments</a>',
+              html: '<span class="govuk-visually-hidden">Submit </span><a href="/manage/final-comments/v1/add-comments?action=&email=&post=">Final comments</a>',
               format: 'numeric'
             }
           ] if data['finalcomments'] != 'complete',
           [
             {
-              html: '<a href="appeal-details?appealCode=1345260&deadline=6">1345260</a>'
+              html: '<a href="appeal-details?appealCode=1345260&action=&email=&post=">1345260</a>'
             },
             {
               html: '21/02939/FUL'
@@ -169,13 +169,13 @@
               format: 'numeric'
             },
             {
-              html: '<a href="/manage/questionnaire/v11/task-list"><span class="govuk-visually-hidden">Submit </span>Questionnaire</a>',
+              html: '<a href="/manage/questionnaire/v11/task-list?action=&email=&post="><span class="govuk-visually-hidden">Submit </span>Questionnaire</a>',
               format: 'numeric'
             }
           ],
           [
             {
-              html: '<a href="appeal-details?appealCode=1345172&deadline=7">1345172</a>'
+              html: '<a href="appeal-details?appealCode=1345172&action=&email=&post=">1345172</a>'
             },
             {
               html: '21/04125/FUL'
@@ -188,13 +188,13 @@
               format: 'numeric'
             },
             {
-              html: '<a href="/manage/questionnaire/v11/task-list"><span class="govuk-visually-hidden">Submit </span>Questionnaire</a>',
+              html: '<a href="/manage/questionnaire/v11/task-list?action=&email=&post="><span class="govuk-visually-hidden">Submit </span>Questionnaire</a>',
               format: 'numeric'
             }
           ],
           [
             {
-              html: '<a href="appeal-details?appealCode=1345222&deadline=27">1345222</a>'
+              html: '<a href="appeal-details?appealCode=1345222&action=&email=&post=">1345222</a>'
             },
             {
               html: '21/05057/FUL'
@@ -207,13 +207,13 @@
               format: 'numeric'
             },
             {
-              html: '<span class="govuk-visually-hidden">Submit </span><a href="/manage/statement/v1/enter-statement">Statement</a>',
+              html: '<span class="govuk-visually-hidden">Submit </span><a href="/manage/statement/v1/enter-statement?action=&email=&post=">Statement</a>',
               format: 'numeric'
             }
           ]  if data['statement'] != 'complete',
           [
             {
-              html: '<a href="appeal-details?appealCode=1345331&deadline=31">1345331</a>'
+              html: '<a href="appeal-details?appealCode=1345331&action=&email=&post=">1345331</a>'
             },
             {
               html: '22/04782/FUL'
@@ -226,7 +226,7 @@
               format: 'numeric'
             },
             {
-              html: '<span class="govuk-visually-hidden">Submit </span><a href="/manage/statement/v1/enter-statement">Statement</a>',
+              html: '<span class="govuk-visually-hidden">Submit </span><a href="/manage/statement/v1/enter-statement?action=&email=&post=">Statement</a>',
               format: 'numeric'
             }
           ] if data['questionnaire'] == 'complete'
