--- a/app/views/_includes/appeal-content/lpa-full-appeal-meta.html
+++ b/app/views/_includes/appeal-content/lpa-full-appeal-meta.html
@@ -38,13 +38,13 @@
       21/04125/FUL
     </dd>
   </div>
-  <div class="govuk-summary-list__row">
+  <!-- <div class="govuk-summary-list__row">
     <dt class="govuk-summary-list__key">
       Comment deadline
     </dt>
     <dd class="govuk-summary-list__value">
       11:59pm on {{ 17 | daysInFuture }}
     </dd>
-  </div>
+  </div> -->
 
 </dl>
