--- a/app/views/manage/appeals/v3/index.html
+++ b/app/views/manage/appeals/v3/index.html
@@ -131,7 +131,7 @@
               format: 'numeric'
             },
             {
-              html: '<a href="/manage/questionnaire/v11/task-list?action=&email=&post="><span class="govuk-visually-hidden">Submit </span>Questionnaire</a>',
+              html: '<a href="/manage/notify/v2/notify-interested-parties?from=appeals">Notify interested parties</a><br><a href="/manage/questionnaire/v11/task-list?action=&email=&post="><span class="govuk-visually-hidden">Submit </span>Questionnaire</a>',
               format: 'numeric'
             }
           ] if data['questionnaire'] != 'complete',
@@ -169,7 +169,7 @@
               format: 'numeric'
             },
             {
-              html: '<a href="/manage/questionnaire/v11/task-list?action=&email=&post="><span class="govuk-visually-hidden">Submit </span>Questionnaire</a>',
+              html: '<a href="/manage/notify/v2/notify-interested-parties?from=appeals">Notify interested parties</a><br><a href="/manage/questionnaire/v11/task-list?action=&email=&post="><span class="govuk-visually-hidden">Submit </span>Questionnaire</a>',
               format: 'numeric'
             }
           ],
@@ -188,7 +188,7 @@
               format: 'numeric'
             },
             {
-              html: '<a href="/manage/questionnaire/v11/task-list?action=&email=&post="><span class="govuk-visually-hidden">Submit </span>Questionnaire</a>',
+              html: '<a href="/manage/notify/v2/notify-interested-parties?from=appeals">Notify interested parties</a><br><a href="/manage/questionnaire/v11/task-list?action=&email=&post="><span class="govuk-visually-hidden">Submit </span>Questionnaire</a>',
               format: 'numeric'
             }
           ],
