Design changes and content updates

--- a/app/views/_includes/appeal-content/lpa-appeal-notice-meta.html
+++ b/app/views/_includes/appeal-content/lpa-appeal-notice-meta.html
@@ -27,7 +27,7 @@
   </div> -->
   <div class="govuk-summary-list__row">
     <dt class="govuk-summary-list__key">
-      Appeal site
+      Location
     </dt>
     <dd class="govuk-summary-list__value">
       21 Cheers Drive, Speedwell, Bristol BS5 7FQ
@@ -57,13 +57,13 @@
       {{ 1 | daysAgo }}
     </dd>
   </div>-->
-  <div class="govuk-summary-list__row">
+  <!-- <div class="govuk-summary-list__row">
     <dt class="govuk-summary-list__key">
       Deadline
     </dt>
     <dd class="govuk-summary-list__value">
       11:59pm on {{ 17 | daysInFuture }}
     </dd>
-  </div>
+  </div> -->
 
 </dl>
