--- a/app/views/manage/access/v1/email.html
+++ b/app/views/manage/access/v1/email.html
@@ -25,6 +25,11 @@
     <label class="govuk-label govuk-label--l" for="email">
       {{ title }}
     </label>
+
+    <p class="govuk-body">
+      We need this to check you can use this service.
+    </p>
+
     <div class="govuk-form-group">
       <input class="govuk-input" id="myemail" name="myemail" type="email" spellcheck="false" autocomplete=none value="">
     </div>
