--- a/app/views/manage/access/v1/start.html
+++ b/app/views/manage/access/v1/start.html
@@ -49,7 +49,7 @@
           view and manage an appeal’s progress
         </li>
         <li>
-          complete and submit an appeal questionnaire
+          notify interested parties
         </li>
         <li>
           complete and submit the:
@@ -65,25 +65,7 @@
               final comment
             </li>
           </ol>
-
       </ul>
-
-
-<!--
-      <ul class="govuk-list govuk-list--bullet">
-        <li>
-          view new and in progress planning appeals
-        </li>
-        <li>
-          view, edit and submit an appeal questionnaire
-        </li>
-        {# <li>
-          invite someone else to view and edit an appeal questionnaire
-        </li> #}
-        <li>
-          add and remove users
-        </li>
-      </ul> -->
 
     </section>
 
@@ -92,7 +74,7 @@
     </h2>
 
     <p class="govuk-body">
-      You must have a local authority email address to use this service.
+      You must have a local authority email address and have been given access to use this service.
     </p>
 
     {{ govukButton({
