--- a/app/views/manage/appeals/v3/appeal-notice.html
+++ b/app/views/manage/appeals/v3/appeal-notice.html
@@ -41,36 +41,20 @@
       </p> -->
 
       <p class="govuk-body">
-        An appeal has been made to The Secretary of State. It will be dealt with by The Planning Inspectorate.
+        An appeal has been made to the Secretary of State against the refusal of planning permission. The Planning Inspectorate will make the final decision on this appeal.
       </p>
-
-      <!-- <p class="govuk-body">
-        As you may have an interest in this planning decision, you can have your say and add a comment to the appeal (this is also known as a ‘written representation’).
-      </p> -->
-
-      <!-- <h2 class="govuk-heading-m">
-        Who we are
-      </h2>
-
-      <p class="govuk-body">
-        The Planning Inspectorate is an independent organisation who review all the evidence and make the final decision.
-      </p> -->
 
       <h2 class="govuk-heading-m">
         What you can do
       </h2>
 
       <p class="govuk-body">
-        You can have your say and add a comment to the appeal (this is also known as a ‘written representation’).
+        If you have an interest in this appeal, you can have your say and add a comment (this is also known as a ‘written representation’).
       </p>
 
       <p class="govuk-body">
-        You must submit your comment by 11:59pm on {{ 7 | daysInFuture }}.
+        The deadline to comment is 11:59pm on {{ 7 | daysInFuture }}.
       </p>
-<!--
-      <p class="govuk-body">
-        If you made a comment on the application, they have been sent to the planning inspector. You do not need to send them again.
-      </p> -->
 
       <h2 class="govuk-heading-m">
         How to comment on the appeal
@@ -84,13 +68,13 @@
         <li>Go to <span class="govuk-!-font-weight-bold" style="text-decoration: underline;">
           https://comment-on-planning-appeals.service.gov.uk/
         </span></li>
-        <li>Search for application number <span class="govuk-!-font-weight-bold">{{ appealCode }}</span>.</li>
+        <li>Search for appeal reference <span class="govuk-!-font-weight-bold">{{ appealCode }}</span>.</li>
         <li>View more details and add your comment.</li>
       </ol>
 
-      <!-- <p class="govuk-body">
-        You must submit your comment by 11:59pm on {{ '14' | daysInFuture }}.
-      </p> -->
+      <p class="govuk-body">
+        Alternatively, you can send your comment by post to: Appeals Team, The Planning Inspectorate, Temple Quay House, 2 The Square, Bristol BS1 6PN.
+      </p>
 
       <h2 class="govuk-heading-m">
         What happens next
@@ -101,8 +85,12 @@
       </p>
 
       <p class="govuk-body">
-        Bristol City Council<br>
+        Bristol City Council
       </p>
+
+      <p class="govuk-body-l">
+        <span class="govuk-!-font-weight-bold"">Contact us on 0117 922 3000</span> or visit our website, <span class="govuk-!-font-weight-bold" style="text-decoration: underline;">https://www.bristol.gov.uk/</span>
+      <p>
 
     </section>
 
