--- a/app/views/_includes/appeal-content/lpa-table-full-submission.html
+++ b/app/views/_includes/appeal-content/lpa-table-full-submission.html
@@ -1,8 +1,9 @@
 <!-- <h2 class="govuk-heading-m">Appeal details</h2> -->
 
+
 <dl class="govuk-summary-list">
   <h2 class="govuk-heading-m">
-    Appeal details
+    Appeal submission
   </h2>
 
   <div class="govuk-summary-list__row">
@@ -54,7 +55,7 @@
       Draft statement of common ground
     </dt>
     <dd class="govuk-summary-list__value">
-      <a href="#" class="govuk-link">Stament of common ground 11.08.2022.doc</a>
+      <a href="#" class="govuk-link">Statement of common ground 11.08.2022.doc</a>
     </dd>
   </div>
 
