--- a/app/views/manage/appeals/v3/appeal-details.html
+++ b/app/views/manage/appeals/v3/appeal-details.html
@@ -30,25 +30,62 @@
 
     {% if data['action'] == 'notified' %}
 
+      <!-- notification about notices -->
       {% set html %}
         <h3 class="govuk-notification-banner__heading">
           Interested parties notified
         </h3>
         <p class="govuk-body">
           {% if data['email'] and data['post'] %}
-            Notice for this appeal has been sent to 6 recipients.
+            Notice for appeal 1345264 has been sent to 6 addresses.
           {% else %}
-            Notice for this appeal has been sent to 3 recipients.
+            Notice for appeal 1345264 has been sent to 3 addresses.
           {% endif %}
         </p>
       {% endset %}
+      {{ govukNotificationBanner({
+        html: html,
+        type: 'success'
+      }) }}
 
+    {% elif data['action'] == 'printed' %}
+
+      <!-- notification about print -->
+      {% set html %}
+        <h3 class="govuk-notification-banner__heading">
+          Printable notice sent
+        </h3>
+        <p class="govuk-body">
+          Notice for appeal 1345264 was sent to your email.
+        </p>
+      {% endset %}
       {{ govukNotificationBanner({
         html: html,
         type: 'success'
       }) }}
 
     {% endif %}
+
+    <div class="govuk-notification-banner" role="region" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner">
+      <div class="govuk-notification-banner__header">
+        <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
+          Important
+        </h2>
+      </div>
+      <div class="govuk-notification-banner__content">
+        <p class="govuk-notification-banner__heading">
+          You have until 11:59pm on {{ 3 | daysInFuture }} to:
+          <ul class="govuk-list govuk-list--bullet">
+            <li>
+              <a href="/manage/notify/v2/send-new?action=">Notify interested parties</a>
+            </li>
+            <li>
+              <a href="/manage/questionnaire/v11/task-list?action=&email=&post=">Submit questionnaire</a>
+            </li>
+          </ul>
+        </p>
+      </div>
+    </div>
 
     <h1 class="govuk-heading-l">
       {{ title }}
@@ -58,31 +95,50 @@
 
   <div class="govuk-grid-column-full">
     {% include "_includes/appeal-content/lpa-full-appeal-meta.html" %}
-  </div>
-
-  <div class="govuk-grid-column-two-thirds">
-    <h2 class="govuk-heading-m">
-      Your action is required
-    </h2>
-
-    <p class="govuk-body">
-      You have until 11:59pm on {{ 3 | daysInFuture }}, to complete the following actions:
-    </p>
-
-    <ul class="govuk-list govuk-list--bullet">
-      <li>
-        <a href="/manage/notify/v2/notify-interested-parties?action=">Notify interested parties</a>
-      </li>
-      <li>
-        <a href="/manage/questionnaire/v11/task-list&action=">Submit questionnaire</a>
-      </li>
-    </ul>
-
     <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
   </div>
 
+  <div class="govuk-grid-column-two-thirds">
+
+    <h2 class="govuk-heading-m">
+      Notified interested parties
+    </h2>
+
+    <p class="govuk-body">
+      {% if data['email'] %}
+        {% if data['post'] %}
+          {% include "_includes/appeal-content/lpa-table-notified-6.html" %}
+        {% else %}
+          {% include "_includes/appeal-content/lpa-table-notified-3-email.html" %}
+        {% endif %}
+      {% elseif data['post'] %}
+        {% include "_includes/appeal-content/lpa-table-notified-3-post.html" %}
+      {% else %}
+        0 notices sent
+      {% endif %}
+    </p>
+
+    <p class="govuk-body">
+      <a href="/manage/appeals/v3/appeal-notice?from=notify&action=" class="govuk-link--no-visited-state">
+        View and print appeal notice
+      </a>
+    </p>
+
+    {{ govukButton({
+      html: 'Notify interested parties',
+      href: '/manage/notify/v2/send-new?from=appeal&action=',
+      classes: 'govuk-button--secondary'
+    }) }}
+
+  </div>
+
   <div class="govuk-grid-column-full">
-    {% include "_includes/appeal-content/full-appeal-data.html" %}
+    <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+  </div>
+
+  <div class="govuk-grid-column-two-thirds">
+    <!-- <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible"> -->
+    {% include "_includes/appeal-content/lpa-table-full-submission.html" %}
   </div>
 
 </div>
