--- a/app/views/manage/access/index.html
+++ b/app/views/manage/access/index.html
@@ -25,10 +25,15 @@
     <h2 class="govuk-heading-m">
       Version {{version}}
       {{ govukTag({
-        classes: 'govuk-tag--yellow govuk-!-margin-left-2',
-        text: 'Work in progress'
+        classes: 'govuk-tag--green govuk-!-margin-left-2',
+        text: 'Ready for research'
       }) }}
     </h2>
+
+    <p class="govuk-!-margin-bottom-2">Changes:</p>
+    <ul class="govuk-list govuk-list--bullet">
+      <li>content update</li>
+    </ul>
 
     {{ govukButton({
       html: 'View prototype',
