--- a/app/views/manage/appeals/v3/index.html
+++ b/app/views/manage/appeals/v3/index.html
@@ -120,7 +120,7 @@
         rows: [
           [
             {
-              html: '<a href="appeal-details?appealCode=1345264&action=&email=&post=">1345264</a>'
+              html: '<a href="appeal-details?appealCode=1345264&action=">1345264</a>'
             },
             {
               html: '21/04125/FUL'
@@ -133,13 +133,13 @@
               format: 'numeric'
             },
             {
-              html: '<a href="/manage/notify/v2/send-new?from=appeals">Notify interested parties</a><br><a href="/manage/questionnaire/v11/task-list?action=&email=&post="><span class="govuk-visually-hidden">Submit </span>Questionnaire</a>',
+              html: '<a href="/manage/notify/v2/send-new?from=appeals">Notify interested parties</a><br><a href="/manage/questionnaire/v11/task-list?action="><span class="govuk-visually-hidden">Submit </span>Questionnaire</a>',
               format: 'numeric'
             }
           ] if data['questionnaire'] != 'complete',
           [
             {
-              html: '<a href="appeal-details?appealCode=1345127&action=&email=&post=">1345127</a>'
+              html: '<a href="appeal-details?appealCode=1345127&action=">1345127</a>'
             },
             {
               html: '22/03021/FUL'
@@ -152,13 +152,13 @@
               format: 'numeric'
             },
             {
-              html: '<span class="govuk-visually-hidden">Submit </span><a href="/manage/final-comments/v1/add-comments?action=&email=&post=">Final comments</a>',
+              html: '<span class="govuk-visually-hidden">Submit </span><a href="/manage/final-comments/v1/add-comments?action=">Final comments</a>',
               format: 'numeric'
             }
           ] if data['finalcomments'] != 'complete',
           [
             {
-              html: '<a href="appeal-details?appealCode=1345260&action=&email=&post=">1345260</a>'
+              html: '<a href="appeal-details?appealCode=1345260&action=">1345260</a>'
             },
             {
               html: '21/02939/FUL'
@@ -171,13 +171,13 @@
               format: 'numeric'
             },
             {
-              html: '<a href="/manage/notify/v2/send-new?from=appeals">Notify interested parties</a><br><a href="/manage/questionnaire/v11/task-list?action=&email=&post="><span class="govuk-visually-hidden">Submit </span>Questionnaire</a>',
+              html: '<a href="/manage/notify/v2/send-new?from=appeals">Notify interested parties</a><br><a href="/manage/questionnaire/v11/task-list?action="><span class="govuk-visually-hidden">Submit </span>Questionnaire</a>',
               format: 'numeric'
             }
           ],
           [
             {
-              html: '<a href="appeal-details?appealCode=1345172&action=&email=&post=">1345172</a>'
+              html: '<a href="appeal-details?appealCode=1345172&action=">1345172</a>'
             },
             {
               html: '21/04122/FUL'
@@ -190,13 +190,13 @@
               format: 'numeric'
             },
             {
-              html: '<a href="/manage/notify/v2/send-new?from=appeals">Notify interested parties</a><br><a href="/manage/questionnaire/v11/task-list?action=&email=&post="><span class="govuk-visually-hidden">Submit </span>Questionnaire</a>',
+              html: '<a href="/manage/notify/v2/send-new?from=appeals">Notify interested parties</a><br><a href="/manage/questionnaire/v11/task-list?action="><span class="govuk-visually-hidden">Submit </span>Questionnaire</a>',
               format: 'numeric'
             }
           ],
           [
             {
-              html: '<a href="appeal-details?appealCode=1345222&action=&email=&post=">1345222</a>'
+              html: '<a href="appeal-details?appealCode=1345222&action=">1345222</a>'
             },
             {
               html: '21/05057/FUL'
@@ -209,13 +209,13 @@
               format: 'numeric'
             },
             {
-              html: '<span class="govuk-visually-hidden">Submit </span><a href="/manage/statement/v1/enter-statement?action=&email=&post=">Statement</a>',
+              html: '<span class="govuk-visually-hidden">Submit </span><a href="/manage/statement/v1/enter-statement?action=">Statement</a>',
               format: 'numeric'
             }
           ]  if data['statement'] != 'complete',
           [
             {
-              html: '<a href="appeal-details?appealCode=1345331&action=&email=&post=">1345331</a>'
+              html: '<a href="appeal-details?appealCode=1345331&action=">1345331</a>'
             },
             {
               html: '22/04782/FUL'
@@ -228,7 +228,7 @@
               format: 'numeric'
             },
             {
-              html: '<span class="govuk-visually-hidden">Submit </span><a href="/manage/statement/v1/enter-statement?action=&email=&post=">Statement</a>',
+              html: '<span class="govuk-visually-hidden">Submit </span><a href="/manage/statement/v1/enter-statement?action=">Statement</a>',
               format: 'numeric'
             }
           ] if data['questionnaire'] == 'complete'
