--- a/app/views/manage/notify/index.html
+++ b/app/views/manage/notify/index.html
@@ -25,15 +25,18 @@
     <h2 class="govuk-heading-m">
       Version {{version}}
       {{ govukTag({
-        classes: 'govuk-tag--yellow govuk-!-margin-left-2',
-        text: 'In progress'
+        classes: 'govuk-tag--green govuk-!-margin-left-2',
+        text: 'Ready for research'
       }) }}
     </h2>
 
     <p class="govuk-!-margin-bottom-2">Changes:</p>
     <ul class="govuk-list govuk-list--bullet">
-      <li>Content updates</li>
-      <li>Notification counter fix</li>
+      <li>content updates</li>
+      <li>notification counter fix</li>
+      <li>adding meta data for the appeal</li>
+      <li>adding printable  preview of notice</li>
+      <li>adding <a href='https://design-system.service.gov.uk/components/notification-banner/' class='govuk-link'>notification banners</a> to appeal detail screen</li>
     </ul>
 
     {{ govukButton({
