--- a/app/views/manage/questionnaire/v11/task-list.html
+++ b/app/views/manage/questionnaire/v11/task-list.html
@@ -6,7 +6,7 @@
 {% block backLink %}
   {{ govukBackLink({
     html: 'Back to your planning appeals',
-    href: '/manage/appeals/v2'
+    href: '/manage/appeals/v3?action='
   }) }}
 {% endblock %}
 
