--- a/app/views/_includes/appeal-content/lpa-table-notified-3-post.html
+++ b/app/views/_includes/appeal-content/lpa-table-notified-3-post.html
@@ -1,4 +1,4 @@
-<table class="govuk-table govuk-!-margin-bottom-9">
+<table class="govuk-table">
   <caption class="govuk-table__caption govuk-visually-hidden">
     3 interested party notices sent
   </caption>
