Fix for appealCode in title, sometimes it seems to clear

--- a/app/views/manage/appeals/v3/appeal-details.html
+++ b/app/views/manage/appeals/v3/appeal-details.html
@@ -74,7 +74,7 @@
     </div>
 
     <h1 class="govuk-heading-l">
-      {{ title }}
+      Appeal {{ data['appealCode'] or '1345264' }}
     </h1>
 
   </div>
