Content update on LPA service start page

--- a/app/views/manage/access/v1/start.html
+++ b/app/views/manage/access/v1/start.html
@@ -74,8 +74,17 @@
     </h2>
 
     <p class="govuk-body">
-      You must have a local authority email address and have been given access to use this service.
+      To use this service, you need to be a verified account user and have:
     </p>
+
+    <ul class="govuk-list govuk-list--bullet">
+      <li>
+        a local authority email address
+      </li>
+      <li>
+        access to your email address to receive a security code
+      </li>
+    </ul>
 
     {{ govukButton({
       href: "email",
