--- a/app/views/manage/appeals/v3/index.html
+++ b/app/views/manage/appeals/v3/index.html
@@ -46,7 +46,7 @@
           Interested parties notified
         </h3>
         <p class="govuk-body">
-          {% if data['email'] and data['post'] %}
+          {% if data['notice'] == '6' %}
             Notice for appeal 1345264 has been sent to 6 addresses.
           {% else %}
             Notice for appeal 1345264 has been sent to 3 addresses.
