--- a/app/views/manage/notify/v2/check-list.html
+++ b/app/views/manage/notify/v2/check-list.html
@@ -15,6 +15,11 @@
 
     <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--l">
 
+    <!-- <p>
+      Post = {{ data['post'] }}
+      Email = {{ data['email'] }}
+    </p> -->
+
     {% if data['post'] %}
 
     <h2 class="govuk-heading-m">
